cho que está funcionando

--- a/HTML/envValidation.html
+++ b/HTML/envValidation.html
@@ -63,8 +63,7 @@
 
     <div id="resultado"></div>
 
-
-    <script src="/JS/guiaDoc.js"></script>
+    <script src="/JS/guiaValidation.js"></script>
     <script src="/JS/HeaderVerification.js"></script>
 </body>
 
