Começando a criar página das praias

--- a/HTML/envValidation.html
+++ b/HTML/envValidation.html
@@ -50,7 +50,7 @@
           
           <label>
             Documento: <br />
-            <input type="file" name="arquivo" required />
+            <input class="input_arq" type="file" name="arquivo" required />
           </label><br /><br />
           
           <!-- Coloque o userId aqui (exemplo hardcoded 1) -->
