--- a/HTML/index.html
+++ b/HTML/index.html
@@ -44,22 +44,22 @@
         <div class="little-about-container">
             <div class="about_card">
                 <h1>Sobre</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio minus sequi debitis! Aut error ea
-                    voluptate hic, voluptatibus necessitatibus quae dolorum aspernatur, molestiae quasi illo, corrupti
-                    numquam esse expedita sequi?</p>
+                <p>Somos uma plataforma que conecta turistas a guias locais de forma prática e segura. Nosso objetivo é
+                    valorizar profissionais da região, garantir experiências autênticas e facilitar o acesso a
+                    informações confiáveis para quem deseja explorar com segurança e conhecimento local.</p>
             </div>
             <div class="about_card card_variant1">
                 <h1>Nossa missão</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio minus sequi debitis! Aut error ea
-                    voluptate hic, voluptatibus necessitatibus quae dolorum aspernatur, molestiae quasi illo, corrupti
-                    numquam esse expedita sequi?</p>
+                <p>Nossa missão é valorizar e reconhecer os guias locais, promovendo um turismo mais humano, seguro e
+                    conectado com a cultura regional te conectando mais facilmente com guias e oferecendo a melhor
+                    experiência possível em cada aventur</p>
             </div>
             <div class="about_card card_variant2">
                 <h1>Trabalhe conosco</h1>
                 <p>Junte-se ao time KaraguáMar e transforme a experiência dos visitantes! Se você ama explorar, tem
                     conhecimento das melhores praias e curte ajudar, essa vaga é pra você. Vem fazer parte dessa jornada
                     com a gente</p>
-                    <button><a href="envValidation.html">Torne-se um guia</a></button>
+                <button><a href="envValidation.html">Torne-se um guia</a></button>
             </div>
         </div>
     </div>
