--- a/HTML/praias.html
+++ b/HTML/praias.html
@@ -1,28 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Validação de Guias</title>
-    <link rel="stylesheet" href="/CSS/global.css">
-    <link rel="stylesheet" href="/CSS/validar.css">
+    <title>Praias</title>
     <link rel="stylesheet" href="/CSS/header.css">
+    <link rel="stylesheet" href="/CSS/global.css">
+    <link rel="stylesheet" href="/CSS/style.css">
 </head>
 
 <body>
-    <style>
-        header {
-            position: absolute;
-            top: 0px;
-
-        }
-
-        #documentos-container{
-            margin-top: 200px;
-            margin: 80px;
-        }
-    </style>
 
     <header>
         <nav>
@@ -47,11 +35,10 @@
         </nav>
     </header>
 
-    <h1>Validação de Guias</h1>
-    <div id="documentos-container"></div>
-
-
-    <script src="/JS/listValidation.js"></script>
+    <div class="banner">
+        <div class="banner_info"></div>
+    </div>
+    
     <script src="/JS/HeaderVerification.js"></script>
 </body>
 
