Acho que ta pronto

--- a/HTML/praias.html
+++ b/HTML/praias.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/CSS/header.css">
     <link rel="stylesheet" href="/CSS/global.css">
     <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="/CSS/praias.css">
 </head>
 
 <body>
@@ -36,9 +37,83 @@
     </header>
 
     <div class="banner">
-        <div class="banner_info"></div>
+        <div class="banner_info">
+            <h1>Descubra as praias mais belas de</h1>
+            <h1>Caraguatatuba</h1>
+        </div>
     </div>
-    
+
+    <div class="container_praias">
+        <div class="intro_section">
+            <h1>O litoral chama por você! </h1>
+            <p>as melhores praias sao em Caraguatatuba</p>
+        </div>
+
+        <div class="cards_container">
+
+            <div class="card_praia">
+                <img src="/IMG/Martin.jpg" alt="">
+                <div class="card_praia_content">
+                    <h1>Martin de Sá</h1>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <button><a href="MartinSa.html">Ver praia</a></button>
+                </div>
+            </div>
+
+            <div class="card_praia">
+                <img src="/IMG/LagoaAzul.jpg" alt="">
+                <div class="card_praia_content">
+                    <h1>Lagoa Azul</h1>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <button><a href="LagoaAzul.html">Ver praia</a></button>
+                </div>
+            </div>
+
+            <div class="card_praia">
+                <img src="/IMG/prainha_card.jpg" alt="">
+                <div class="card_praia_content">
+                    <h1>Prainha</h1>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <button><a href="Prainha.html">Ver praia</a></button>
+                </div>
+            </div>
+
+            <div class="card_praia">
+                <img src="/IMG/mococa.webp" alt="">
+                <div class="card_praia_content">
+                    <h1>Mococa</h1>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <button><a href="Mococa.html">Ver praia</a></button>
+                </div>
+            </div>
+
+            <div class="card_praia">
+                <img src="/IMG/mococa.webp" alt="">
+                <div class="card_praia_content">
+                    <h1>Pedra da freira</h1>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <button><a href="Freira.html">Ver praia</a></button>
+                </div>
+            </div>
+
+            <div class="card_praia">
+                <img src="/IMG/Massaquacu.jpg" alt="">
+                <div class="card_praia_content">
+                    <h1>Massaguaçu </h1>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <button><a href="Massaquacu.html">Ver praia</a></button>
+                </div>
+            </div>
+
+
+        </div>
+
+    </div>
+
+
+
+
+
     <script src="/JS/HeaderVerification.js"></script>
 </body>
 
